--- a/public/css/background.css
+++ b/public/css/background.css
@@ -1,18 +1,94 @@
-body {
-    padding:0; margin:0;
+.galaxy {
+  overflow: hidden;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
+.sky {
+  width: 100%w;
+  height: 100%;
+  background: rgb(16, 21, 29);
+  background: linear-gradient(180deg, rgb(8, 10, 26) 0%, rgb(40, 43, 71) 100%);
+}
+
+i {
+  position: absolute;
+  background: linear-gradient(0deg, rgba(255, 255, 255, 1) 0%, transparent);
+  height: 300px;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  animation: starDrop 5s infinite linear;
+  filter: blur(0.8px);
+}
+
+i:nth-child(4n + 1) {
+  background: linear-gradient(0deg, rgb(253, 242, 191) 0%, transparent);
+}
+
+i:nth-child(4n + 2) {
+  background: linear-gradient(0deg, rgb(210, 228, 255) 0%, transparent);
+}
+
+i:nth-child(4n + 3) {
+  background-color: rgb(250, 210, 191);
+  background: linear-gradient(0deg, rgba(2250, 210, 191, 1) 0%, transparent);
+}
+
+@keyframes starDrop {
+  0% {
+    transform: rotate(45deg) translate(0px, -2000px);
   }
-  #layout { 
-    color:transparent;
-    height:600px;
-    width:100%;
-    height:100%; 
+
+  100% {
+    transform: rotate(45deg) translate(0px, calc(100vh + 200px));
   }
-  .stars {
-    z-index: 0;
-    position: absolute;
-    background-image: url(   https://www.manufosela.es/shooting_stars/hori.png), url( https://www.manufosela.es/shooting_stars/stars_5.png);
-    background-repeat: repeat-x, repeat-x repeat-y;
-    transform:translate3D(0em, 0em, 0);
-    animation: stars 21s ease; 
-    transform-style: preserve-3d;
+}
+
+j {
+  display: inline-block;
+  position: absolute;
+  background-color: white;
+  border-radius: 50%;
+  animation: starMove 1s linear infinite;
+}
+
+j:nth-child(3n + 1) {
+  background-color: rgb(248, 193, 167);
+}
+
+j:nth-child(3n + 2) {
+  background-color: rgb(207, 199, 253);
+}
+
+@keyframes starMove {
+  0% {
+    transform: translateX(-100vw);
   }
+
+  100% {
+    transform: translateX(100vw);
+  }
+}
+
+.moon {
+  position: absolute;
+  top: 20%;
+  right: 15%;
+  content: "";
+  width: 110px;
+  height: 110px;
+  border-radius: 50%;
+  z-index: 1;
+  background: rgb(253, 248, 221);
+  filter: blur(1px);
+  box-shadow: 0px 0px 5px 5px rgba(253, 248, 221, 0.5);
+  transition: 250ms;
+  cursor: pointer;
+}
+
+.moon:hover {
+  transform: scale(1.05);
+}
