--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -1,635 +1,512 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-@import url('https://fonts.googleapis.com/css?family=Sarabun');
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+@import url("https://fonts.googleapis.com/css?family=Sarabun");
 
 :root {
-	--main-color:gold;
+  --main-color: gold;
 }
 
-h1, h2, h3, h4, h5, h6, p, span, a, b, ul, ol, ui {
-	color: white;
-	font-family: 'Sarabun';
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span,
+a,
+b,
+ul,
+ol,
+ui {
+  color: white;
+  font-family: "Sarabun";
 }
 .material-icons {
-	color: white;
+  color: white;
 }
 
 body {
-	background-image:url('../images/Screenshot_22.jpg');
-	overflow: hidden;
+  background-image: url("../images/Screenshot_22.jpg");
+  overflow: hidden;
 }
 
 .drop-shadow {
-	-webkit-filter: drop-shadow(5px 5px 5px #222);
-	filter: drop-shadow(5px 5px 5px #222);
+  -webkit-filter: drop-shadow(5px 5px 5px #222);
+  filter: drop-shadow(5px 5px 5px #222);
 }
 
 .bg {
-	position:absolute;
-	width:100%;
-	height:100%;
-	background:rgba(0, 0, 0, 0.507);
-	top:0;
-	left:0;
-	text-align: right ;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.507);
+  top: 0;
+  left: 0;
+  text-align: right;
 }
 
 .menu {
-	background-color: rgba(43, 43, 43, 0);
-	position: absolute;
-	width: 55%;
-	height: 60%;
-    left: 50%;
-	top: 45%;
-    transform: translate(-50%, -50%);
-	position:relative;
-	z-index:10;
+  background-color: rgba(43, 43, 43, 0);
+  position: absolute;
+  width: 55%;
+  height: 60%;
+  left: 50%;
+  top: 45%;
+  transform: translate(-50%, -50%);
+  position: relative;
+  z-index: 10;
 }
 
 .header {
-	width:100%;
-	height:6%;
-	top: -3%;
-	background-color: rgba(20, 20, 20, 0.829);
-	border-radius: 10px;
-	background-repeat: repeat;
-	position:relative;
-	
+  width: 100%;
+  height: 6%;
+  top: -3%;
+  background-color: rgba(20, 20, 20, 0.829);
+  border-radius: 10px;
+  background-repeat: repeat;
+  position: relative;
 }
 
 .header > div {
-	font-family: "Roboto";
-	position: absolute;
-	right: 0%;
-	top: 50%;
-	transform: translateY(-50%);
-	color: rgb(0, 79, 250);
-	font-size: 1vw;
-	transition: 0.2s;
-	font-weight: bold;
-	padding: 6px 12px 6px 12px;
+  font-family: "Roboto";
+  position: absolute;
+  right: 0%;
+  top: 50%;
+  transform: translateY(-50%);
+  color: rgb(0, 79, 250);
+  font-size: 1vw;
+  transition: 0.2s;
+  font-weight: bold;
+  padding: 6px 12px 6px 12px;
 }
 
 .header > div:hover {
-	color:gold;
+  color: gold;
 }
 
 .header > span {
-	font-size: 1.1vw;
-    font-family: "Sarabun";
-    font-weight: light;
-    position: absolute;
-    top: 45%;
-    left: 2%;
-    transform: translateY(-40%);
+  font-size: 1.1vw;
+  font-family: "Sarabun";
+  font-weight: light;
+  position: absolute;
+  top: 45%;
+  left: 2%;
+  transform: translateY(-40%);
 }
 
 .content {
-	width:100%;
-	height:80%;
-	position:relative;
-	display:flex;
-	flex-direction: row;
-	justify-items: center;
+  width: 100%;
+  height: 80%;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
 }
 .category {
-	margin-right: 2%;
-	flex: 0 0 49%;
-	background-color: rgba(20, 20, 20, 0.829);
-	padding: 0% 0% 0% 0%;
-	border-radius: 10px;
-	/* overflow-y: auto; */
+  margin-right: 2%;
+  flex: 0 0 49%;
+  background-color: rgba(20, 20, 20, 0.829);
+  padding: 0% 0% 0% 0%;
+  border-radius: 10px;
+  /* overflow-y: auto; */
 }
 .category2 {
-	margin-right: 0%;
-	flex: 0 0 49%;
-	background-color: rgba(20, 20, 20, 0.829);
-	padding: 0% 0% 0% 0%;
-	border-radius: 10px;
-	/* overflow-y: auto; */
+  margin-right: 0%;
+  flex: 0 0 49%;
+  background-color: rgba(20, 20, 20, 0.829);
+  padding: 0% 0% 0% 0%;
+  border-radius: 10px;
+  /* overflow-y: auto; */
 }
-.Resume1{
-	justify-content: center;
+.Resume1 {
+  justify-content: center;
 }
-.Resume2{
-	justify-content: center;
+.Resume2 {
+  justify-content: center;
 }
-
 
 .info {
-	flex:1;
-	display:flex;
-	flex-direction:column;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .list {
-	flex:0 0 50%;
-	background-color: rgba(20, 20, 20, 0.829);
-	overflow-y:auto;
-	border-radius: 10px;
-	margin-bottom: 1%;
+  flex: 0 0 50%;
+  background-color: rgba(20, 20, 20, 0.829);
+  overflow-y: auto;
+  border-radius: 10px;
+  margin-bottom: 1%;
 }
-
 
 .list::-webkit-scrollbar {
-	display: none;
+  display: none;
 }
 
-.list-grid{
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-	grid-gap:1.5%;
-	grid-auto-rows: 1fr;
+.list-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-gap: 1.5%;
+  grid-auto-rows: 1fr;
 }
 
 .list-grid::before {
-	content: '';
-	width: 0;
-	padding-bottom: 100%;
-	grid-row: 1 / 1;
-	grid-column: 1 / 1;
+  content: "";
+  width: 0;
+  padding-bottom: 100%;
+  grid-row: 1 / 1;
+  grid-column: 1 / 1;
 }
 
 .list-grid > *:first-child {
-	grid-row: 1 / 1;
-	grid-column: 1 / 1;
+  grid-row: 1 / 1;
+  grid-column: 1 / 1;
 }
 
 .item {
-	width: 100%;
-	background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center center;
-	background-color: rgb(43, 43, 43);
-	opacity:0.75;
-	transition:0.25s;
-	
-	position:relative;
+  width: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: rgb(43, 43, 43);
+  opacity: 0.75;
+  transition: 0.25s;
+
+  position: relative;
 }
 
 .item.require {
-	display:inline-block;
-	width:1.5vw;
-	height:1.5vw;
+  display: inline-block;
+  width: 1.5vw;
+  height: 1.5vw;
 }
 
 .item.active {
-	background-color:rgba(100,100,100,0.1);
-	border: 2px solid rgba(0, 81, 230, 0.4);
-	opacity:1.0;
+  background-color: rgba(100, 100, 100, 0.1);
+  border: 2px solid rgba(0, 81, 230, 0.4);
+  opacity: 1;
 }
 
 .item:hover {
-	background-color:rgba(100,100,100,0.25);
-	border: 1px solid rgba(255,255,255,0.4);
-	opacity:1.0;
-	
+  background-color: rgba(100, 100, 100, 0.25);
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  opacity: 1;
 }
 
 .require-row {
-	flex:0 0 10%;
-	height:5%;
-	display:table;
-	table-layout: fixed;
+  flex: 0 0 10%;
+  height: 5%;
+  display: table;
+  table-layout: fixed;
 }
 
 .require-row-item {
-	display:table-cell;
-	width:7%;
-	background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center center;
+  display: table-cell;
+  width: 7%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 .require-row-name {
-	display:table-cell;
-	width:80%;
-	padding-left:1%;
-	vertical-align: middle;
+  display: table-cell;
+  width: 80%;
+  padding-left: 1%;
+  vertical-align: middle;
 }
 
 .craft-info {
-	/* border-top: 1px solid black; */
-	background-color: rgba(20, 20, 20, 0.829);
-	border-radius: 10px;
-	flex:0 0 40%;
-	padding: 1% 0% 0% 4%;
-	display:flex;
-	flex-direction:column;
-	overflow-y:auto;
+  /* border-top: 1px solid black; */
+  background-color: rgba(20, 20, 20, 0.829);
+  border-radius: 10px;
+  flex: 0 0 40%;
+  padding: 1% 0% 0% 4%;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
 }
 
 .craft-require {
-	flex:0 0 5%;
-	font-size: 0.7vw;
-	font-family: 'Sarabun';
+  flex: 0 0 5%;
+  font-size: 0.7vw;
+  font-family: "Sarabun";
 }
 
 .craft-require-list {
-	font-size: 0.7vw;
-	font-family: 'Sarabun';
-	color:white;
-	padding:1%;
+  font-size: 0.7vw;
+  font-family: "Sarabun";
+  color: white;
+  padding: 1%;
 
-	flex:1;
-	overflow-y:auto;
-	
-	display:flex;
-	flex-direction:column;
+  flex: 1;
+  overflow-y: auto;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .craft-require-list::-webkit-scrollbar {
-	display: none;
+  display: none;
 }
 
-
 .craft-info-bottom {
-	flex: 0 0 10%;
-	border-radius: 10px;
-	padding: 1%;
-	background-color: rgba(20, 20, 20, 0.829);
-	position: relative;
-	top: 1%;
+  flex: 0 0 10%;
+  border-radius: 10px;
+  padding: 1%;
+  background-color: rgba(20, 20, 20, 0.829);
+  position: relative;
+  top: 1%;
 }
 
 .craft-info-cost {
-	position:absolute;
-	left:27%;
-	top:50%;
-	transform:translateY(-50%);
+  position: absolute;
+  left: 27%;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .craft-info-cost.shifted {
-	left: 5%;
+  left: 5%;
 }
 
 .craft-submit {
-	font-size:1.0vw;
-	text-align: center;
-	position:absolute;
-	border: 3px solid #0057FF;
-	width: fit-content;
-    margin: 0 auto;
-    background-color: #0057FF;
-	width: 106px;
-	height: 35px;
-	border-radius: 8px;
-	right:2%;
-	top:50%;
-	transform:translateY(-50%);
-	transition:0.5s;
-	color:rgb(255, 255, 255);
+  font-size: 1vw;
+  text-align: center;
+  position: absolute;
+  border: 3px solid #0057ff;
+  width: fit-content;
+  margin: 0 auto;
+  background-color: #0057ff;
+  width: 106px;
+  height: 35px;
+  border-radius: 8px;
+  right: 2%;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: 0.5s;
+  color: rgb(255, 255, 255);
 }
 
 .craft-submit:hover {
-	font-size:1.1vw;
-	border: 3px solid #ffffff;
-	color:#0057FF;
-	background-color: #ffffff;
-
+  font-size: 1.1vw;
+  border: 3px solid #ffffff;
+  color: #0057ff;
+  background-color: #ffffff;
 }
 
 .craft-cost {
-	display:inline-block;
-	font-size:0.8vw;
+  display: inline-block;
+  font-size: 0.8vw;
 }
 
 .row {
-	height: 100%;
+  height: 100%;
 }
 
 .hidov {
-	overflow:hidden;
+  overflow: hidden;
 }
 
 .middle {
-	text-align: center;
+  text-align: center;
 }
 
 .right {
-	text-align: right;
+  text-align: right;
 }
 
 .float-right {
-	float: right;
+  float: right;
 }
 
 .full {
-	width:100%;
+  width: 100%;
 }
 
 .half {
-	width:50%;
+  width: 50%;
 }
 
 .onehalf {
-	width:25%;
+  width: 25%;
 }
 
 .full-height {
-	height:100%;
+  height: 100%;
 }
 
 .vertical-center {
-	margin: 0;
-	position: absolute;
-	top: 50%;
-	-ms-transform: translateY(-50%);
-	transform: translateY(-50%);
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .vertical-center-right {
-	margin: 0;
-	position: absolute;
-	top: 50%;
-	right: 0;
-	margin-right:2.5%;
-	-ms-transform: translateY(-50%);
-	transform: translateY(-50%);
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  right: 0;
+  margin-right: 2.5%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .row {
-	display: flex;
-	/*flex-wrap: wrap;*/
-	flex: 1;
+  display: flex;
+  /*flex-wrap: wrap;*/
+  flex: 1;
 }
 
 .column {
-	flex:1;
+  flex: 1;
 }
 
 .column-left {
-	flex:0 0 8%;
+  flex: 0 0 8%;
 }
 
 .inventory {
-	height:100%;
-	display:flex;
+  height: 100%;
+  display: flex;
 }
 
 select {
-	color:white;
-	background: rgba(0,0,0,0.4);
-	border: none;
-	outline: none;
-	border-color: inherit;
+  color: white;
+  background: rgba(0, 0, 0, 0.4);
+  border: none;
+  outline: none;
+  border-color: inherit;
 }
 
 .flex {
-	display:flex;
-	width:100%;
+  display: flex;
+  width: 100%;
 }
 
 .flex .column {
-	flex-direction:column;
+  flex-direction: column;
 }
 
 .flex-column {
-	flex-direction:column;
+  flex-direction: column;
 }
 
 .flex .col-1 {
-	flex: 0 0 10%;
+  flex: 0 0 10%;
 }
 
 .flex .col-1 {
-	flex: 0 0 20%;
+  flex: 0 0 20%;
 }
 
 .flex .col-3 {
-	flex: 0 0 30%;
+  flex: 0 0 30%;
 }
 
 .flex .col-4 {
-	flex: 0 0 40%;
+  flex: 0 0 40%;
 }
 
 .flex .col-5 {
-	flex: 0 0 50%;
+  flex: 0 0 50%;
 }
 
 .flex .col-6 {
-	flex: 0 0 60%;
+  flex: 0 0 60%;
 }
 
 .flex .col-7 {
-	flex: 0 0 70%;
+  flex: 0 0 70%;
 }
 
 .pa-1 {
-	padding:1%;
+  padding: 1%;
 }
 
 .pa-2 {
-	padding:2%;
+  padding: 2%;
 }
 
 .pa-3 {
-	padding:3%;
+  padding: 3%;
 }
 
 .fv-0-5 {
-	font-size: 0.5vw;
+  font-size: 0.5vw;
 }
 
 .fv-0-7 {
-	font-size: 0.7vw;
+  font-size: 0.7vw;
 }
 
 .fv-0-8 {
-	font-size: 0.8vw;
+  font-size: 0.8vw;
 }
 
 .fv-1 {
-	font-size: 1vw;
+  font-size: 1vw;
 }
 
 .fv-1-5 {
-	font-size: 1.5vw;
+  font-size: 1.5vw;
 }
 
 .fv-2 {
-	font-size: 2.0vw;
+  font-size: 2vw;
 }
 
 .text-muted {
-	color: #6c757d !important;
+  color: #6c757d !important;
 }
 
 .text-lgray {
-	color: #dedede !important;
+  color: #dedede !important;
 }
 
 .hover-scale {
-	transition:0.2s;
+  transition: 0.2s;
 }
 
 .hover-scale:hover {
-	transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 @media screen and (max-width: 1450px) {
-	#menu{
-		width: 60%;
-	}
+  #menu {
+    width: 60%;
+  }
 
-	#menu2{
-		width: 60%;
-	}
+  #menu2 {
+    width: 60%;
+  }
 }
 
 @media screen and (max-width: 1200px) {
-	#spawn-menu{
-		width:35%;
-	}
+  #spawn-menu {
+    width: 35%;
+  }
 
-	#menu{
-		width: 70%;
-	}
+  #menu {
+    width: 70%;
+  }
 
-	#menu2{
-		width: 70%;
-	}
+  #menu2 {
+    width: 70%;
+  }
 }
 
 @media screen and (max-width: 850px) {
-	#spawn-menu{
-		width:45%;
-	}
+  #spawn-menu {
+    width: 45%;
+  }
 
-	#menu{
-		width: 90%;
-	}
+  #menu {
+    width: 90%;
+  }
 
-	#menu2{
-		width: 90%;
-	}
+  #menu2 {
+    width: 90%;
+  }
 }
-
-/* body > * {
-	flex-shrink: 0;
-	user-select: none;
-	-o-user-select:none;
-	-moz-user-select: none;
-	-khtml-user-select: none;
-	-webkit-user-select: none; 
-} */
-
-/* * {
-	-moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-} */
-
-/* @keyframes offsettozero {
-	to {
-		stroke-dashoffset: 0;
-	}
-} */
-
-/* textarea {
-	resize: none;
-} */
-
-/* .craft-name {
-	flex:0 0 5%;
-	font-size: 2vw;
-	font-family: 'Sarabun';
-	color: var(--main-color);
-} */
-
-/* .craft-button-plus, .craft-button-minus {
-	width:10%;
-	display: inline-block;
-	
-	font-family: 'Sarabun';
-	font-size:1.5vw;
-	font-weight: bold;
-    position: relative;
-    background: rgba(60, 60, 60, 0.2);
-    transition: 0.1s;
-    padding: 1% 2% 1% 2%;
-	text-align:center;
-	border: 1px solid rgba(0,0,0,0.25);
-} */
-
-/* .craft-button-plus span, .craft-button-minus span {
-
-}
-
-.craft-info-number {
-	font-family: 'Sarabun';
-	font-size:1.5vw;
-    color: white;
-    margin-top: 5%;
-    width: 15%;
-    position: relative;
-    background: rgba(0,0,0,0.5);
-    height: 7%;
-    transition: 0.1s;
-    padding: 1% 2% 1% 2%;
-    border: 1px solid rgba(20,20,20,0.2);
-	text-align:center;
-}
-
-.craft-button-plus:hover, .craft-button-minus:hover {
-	background: #424242;
-	border: 1px solid var(--main-color);
-} */
-
-/* .category::-webkit-scrollbar {
-	display: none;
-}
-
-.category-button {
-	margin-top: 5%;
-	width: 100%;
-	position: relative;
-	background: #424242;
-	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-	border-radius: 5px;
-	height: 7%;
-	transition: 0.1s;
-	border-left: 3px solid gray;
-}
-
-.category-button:hover {
-	background-repeat: repeat;
-	background-color: #4c4c4c;
-	background-size:cover;
-	width: 120%;
-	box-sizing: border-box;
-	border-width: medium;
-	border-left: 7px solid;
-	border-top:10px;
-
-	border-color: var(--main-color);
-}
-
-.category-button:hover span {
-	color: rgb(255, 255, 255);
-	
-}
-
-.category-button span {
-	position:absolute;
-	left:15%;
-	top:50%;
-	transform: translateY(-50%);
-	transition:0.2s;
-	font-family:'Sarabun';
-	font-size:0.9vw;
-	color:#dedede;
-	stroke: #222;
-}
-
-.category-button.active {
-	background-repeat: repeat;
-	background-color: #0057FF;
-	background-size:cover;
-	width: 120%;
-	box-sizing: border-box;
-	border-width: medium;
-	border-left: 7px solid;
-
-	border-color: var(--main-color);
-} */
