--- a/public/css/resume1.css
+++ b/public/css/resume1.css
@@ -108,7 +108,7 @@ section {
   overflow: hidden;
 }
 /*--------------------------------------------------------------
-# Akills
+# Skills
 --------------------------------------------------------------*/
 .skills .progress {
   height: 60px;
